@@ -9,6 +9,8 @@ Changes to Version 2.0-12
 	o moved survival from Depends to Suggests (request of Michael Friendly); added survey to Suggests.
 	
 	o added Anova.svyglm and linearHypothesis.glm.
+	
+	o fixed bug in linearHypothesis() that affected printing of some hypotheses (reported by Arne Henningsen).
 
 Changes to Version 2.0-11
 
